unpackaged/objects/Referral__c.object
<CustomObject>
    <fields>
        <fullName>Complaint_Actual_Receive_Date__c</fullName>
        <formula>Complaint__r.Actual_Receive_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complaint Actual Receive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complaint__c</fullName>
        <label>Complaint</label>
        <referenceTo>Complaints__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Created_By_BDO__c</fullName>
        <formula>TEXT(CreatedBy.BDO__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By BDO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Partner_Type__c</fullName>
        <formula>IF(INCLUDES( External_Partner__r.Multi_Type__c, &quot;CUPA&quot;), &quot;CUPA&quot; + BR() , NULL) +
IF(INCLUDES( External_Partner__r.Multi_Type__c , &quot;LEA&quot;), &quot;LEA&quot; + BR() , NULL) +
IF(INCLUDES( External_Partner__r.Multi_Type__c , &quot;Air District&quot;), &quot;Air District&quot; + BR() , NULL) +
IF(INCLUDES( External_Partner__r.Multi_Type__c , &quot;County Agricultural Commissioner&quot;), &quot;County Agricultural Commissioner&quot; + BR() , NULL) +
IF(INCLUDES(External_Partner__r.Multi_Type__c , &quot;State Water Resources Regional Board&quot;), &quot;State Water Resources Regional Board&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Partner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Partner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>External Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Contacts__c</fullName>
        <label>Number of Contacts</label>
        <summaryForeignKey>ReferralContact__c.Referral__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Previous_Id__c</fullName>
        <label>Previous Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectedContacts__c</fullName>
        <label>SelectedContacts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Findings Received</fullName>
                </value>
                <value>
                    <fullName>Awaiting Findings</fullName>
                    <default>true</default>
                    <label>Awaiting Findings</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <isActive>false</isActive>
                    <label>Closed</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <isActive>false</isActive>
                    <label>Open</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Data</label>
        <type>Checkbox</type>
    </fields>
    <label>Referral</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Complaint__c</columns>
        <columns>External_Partner__c</columns>
        <columns>Number_of_Contacts__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Findings_Received</fullName>
        <columns>NAME</columns>
        <columns>Complaint__c</columns>
        <columns>External_Partner__c</columns>
        <columns>Number_of_Contacts__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Findings Received</value>
        </filters>
        <label>Findings Received</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>REF-{00000}</displayFormat>
        <label>Referral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>